# stingray-plugin-api-samples

./: .gitattributes  .gitignore  README.md
cmake/: CMakeEditorPlugin.cmake  CMakeMacros.cmake  CMakePlatforms.cmake  CMakeSettings.cmake  CMakeUtils.cmake
editor_plugins/: .gitignore
editor_plugins/docking/: docking-examples.js  docking-examples.plugin
editor_plugins/editor_native_code/: editor-native-code.html  editor-native-code.js  editor-native-code.plugin
editor_plugins/generic_asset/: generic-asset-actions.js  generic-asset-listener.js  generic_asset.plugin
editor_plugins/jsdoc/: jsdoc.plugin
editor_plugins/level_editor_tool/: level-editor-tool-actions.js  level-editor-tool-config-panel.js  level-editor-tool.plugin
editor_plugins/lua_module/: lua-module.plugin
editor_plugins/mesh_import/: mesh-import-dialog.css  mesh-import-dialog.js  mesh-import.plugin  mesh-importer.js
editor_plugins/mithril_components/: accordion-component-test.js  checkbox-component-test.js  mithril_components_tests.plugin  property-carousel-test.js  property-editor-from-type.js  property-editor-test.js  property-table.js  resizer-layout-test.js  string-component-test.js
editor_plugins/profiler/: profiler-test.html  profiler-test.js  profiler.plugin
editor_plugins/resources/: test-resources.plugin
editor_plugins/scatter/: scatter.plugin
editor_plugins/test_actions/: module-actions.js  test-actions.plugin
editor_plugins/viewport_extension/: viewport-extension-controller.js  viewport-extension-test.html  viewport-extension-test.js  viewport-extension-test.plugin
editor_plugins/widget_playground/: angular-playground.html  mithril-playground.js  widget-playground.plugin
engine_plugins/: .gitignore  CMakeUtils.txt  clean-dlls-and-pdbs.bat  generate_all.bat  generate_vc14.bat
engine_plugins/bigger_plugin/: CMakeLists.txt  README.md  plugin.cpp
engine_plugins/flow_nodes_sample_plugin/: CMakeLists.txt  README.md  dragon_flow_node.cpp  dragon_flow_node.h  plugin.cpp  profiler_flow_node.cpp  profiler_flow_node.h  sample_flow_node.cpp  sample_flow_node.h
engine_plugins/render_plugin/: README.md  plugin.cpp
engine_plugins/simple_plugin/: plugin.c
samples/: .gitignore  .jshintrc  README.md  clean-dlls-and-pdbs.bat  generate_all.bat  generate_vc14.bat
samples/asset_stats/: dream-stats-actions.js  dream-stats.js  dream-stats.lua  dream-stats.plugin
samples/bigger_plugin/: plugin.cpp
samples/docking/: docking-examples.html  docking-examples.js
samples/editor_native_code/: CMakeLists.txt  editor-native-code.html  editor-native-code.js
samples/editor_native_code/editor_plugin/: editor-native-code.plugin
samples/editor_native_code/src/: editor_native_plugin.cpp  editor_native_plugin.h  editor_native_plugin.vcxproj
samples/flow_nodes_sample_plugin/: CMakeLists.txt  dragon_flow_node.cpp  flow_nodes_sample.plugin  flow_nodes_sample_plugin.flow_node_definitions  profiler_flow_node.cpp  sample_flow_node.cpp
samples/generic_asset/: generic-asset-actions.js  generic-asset-listener.js  (+1 more)
samples/render_plugin/: CMakeLists.txt
samples/render_plugin/render_plugin_sample/: plugin_mesh.flow  plugin_mesh.flow_editor  plugin_mesh.unit
(+188 files in other folders)
